--- a/common/debian/contrail-install-packages/debian/rules
+++ b/common/debian/contrail-install-packages/debian/rules
@@ -8,29 +8,45 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 SPEC_DIR := $(shell pwd)
-export SB_TOP := $(shell pwd | sed -re "s/\/build\/debian\/contrail-install-packages//g")
+export SB_TOP := $(shell pwd | sed -re "s/(.*)\/tools\/packaging\/(.*)/\1/")
 
 export BUILDTIME := $(shell date -u +%y%m%d%H%M)
-export buildroot := $(SB_TOP)/build/debian/contrail-install-packages/debian/contrail-install-packages
+export buildroot := $(SB_TOP)/build/debian/contrail-install-packages/
 export _contrailopt := /opt/contrail
 
 SRC_VER := $(shell cat $(SB_TOP)/controller/src/base/version.info)
 
 BUILDTAG =
-TGZ_FILE =
+OS_VER =
+DEFAULT_PACKAGE_SOURCES = $(SB_TOP)/build/debian $(SB_TOP)/build/packages $(SB_TOP)/build/openstack
+
 ifdef TAG
-BUILDTAG = $(SRC_VER)-$(TAG)~$(CONTRAIL_SKU)
+BUILDTAG := $(SRC_VER)-$(TAG)~$(CONTRAIL_SKU)
 else
-BUILDTAG = $(SRC_VER)-$(BUILDTIME)~$(CONTRAIL_SKU)
+BUILDTAG := $(SRC_VER)-$(BUILDTIME)~$(CONTRAIL_SKU)
+TAG := $(BUILDTIME)
 endif
 
-ifdef FILE_LIST
-TGZ_FILE = $(FILE_LIST)
+ifdef PACKAGE_DIRS
+PACKAGE_SOURCES := $(PACKAGE_DIRS)
+else 
+PACKAGE_SOURCES := $(DEFAULT_PACKAGE_SOURCES)
 endif
 
+ifdef OS_VERSION
+OS_VER := $(shell echo $(OS_VERSION) | sed 's,[-|.],,g')
+else
+OS_VER := $(shell PYTHONPATH=$(PYTHONPATH):$(SB_TOP)/tools/packaging/build/ python -c "import package_utils; print package_utils.get_platform()")
+endif
+
+ifdef PACKAGE_FILE
+PKG_FILE := $(PACKAGE_FILE)
+else
+PKG_FILE := $(SB_TOP)/tools/packaging/package_configs/$(OS_VER)-$(CONTRAIL_SKU)-contrail
+endif
 
 %:
-	dh $@
+	dh $@ --tmpdir=${buildroot} --destdir=${SB_TOP}/build/debian
 
 override_dh_auto_build: 
 	cat debian/changelog.in | sed 's,BUILDTAG,$(BUILDTAG),g' > debian/changelog
@@ -43,14 +59,20 @@ override_dh_auto_install:
 	install -d -m 755 $(buildroot)/etc/contrail/
 	install -d -m 755 $(buildroot)$(_contrailopt)
 	install -d -m 755 $(buildroot)$(_contrailopt)/puppet
+	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_install_repo
 	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_packages
 	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_packages/helpers
 	install -d -m 755 $(buildroot)$(_contrailopt)/bin
 	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_installer/contrail_setup_utils
-	# install TGZ file and packages list file
-	if [ -f $(TGZ_FILE) ]; then echo "Using TGZ FILE = $(TGZ_FILE)"; install -p -m 644 $(TGZ_FILE) $(buildroot)$(_contrailopt)/contrail_packages/contrail_debs.tgz; else echo "ERROR: TGZ file containing all debs is not supplied or not present"; echo "Supply Argument: FILE_LIST=<TGZ FILE>"; exit 1; fi
-	# install etc files
+	$(SB_TOP)/tools/packaging/build/copy_built_packages.py --package-file $(PKG_FILE) \
+							       --destination-dir $(buildroot)$(_contrailopt)/contrail_install_repo/ \
+							       --source-dirs $(PACKAGE_SOURCES) \
+							       --excludes contrail-install-packages || (echo "Copying Built packages failed"; exit 1)
+	if [ ! -f $(SB_TOP)/build/debian/contrail_installer.tgz ]; then \
+		$(SB_TOP)/tools/provisioning/create_installer.py; mv contrail_installer.tgz $(SB_TOP)/build/debian/contrail_installer.tgz; \
+	fi
 	install -p -m 644 $(SB_TOP)/build/debian/contrail_installer.tgz  $(buildroot)$(_contrailopt)/contrail_installer.tgz
+	
 	tar -cvzf $(SB_TOP)/build/contrail-puppet-manifest.tgz -C $(SB_TOP)/tools/puppet .
 	install -p -m 755 $(SB_TOP)/build/contrail-puppet-manifest.tgz $(buildroot)$(_contrailopt)/puppet/contrail-puppet-manifest.tgz
 	# install pkgs needed first
