--- a/storage/debian/contrail-storage-packages/debian/rules
+++ b/storage/debian/contrail-storage-packages/debian/rules
@@ -8,28 +8,59 @@
 # Uncomment this to turn on verbose mode.
 export DH_VERBOSE=1
 SPEC_DIR := $(shell pwd)
-export SB_TOP := $(shell pwd | sed -re "s/\/build\/debian\/contrail-storage-packages//g")
+export SB_TOP := $(shell pwd | sed -re "s/(.*)\/tools\/packaging\/(.*)/\1/")
 
 export BUILDTIME := $(shell date -u +%y%m%d%H%M)
-export buildroot := $(SB_TOP)/build/debian/contrail-storage-packages/debian/contrail-storage-packages
+export buildroot := $(SB_TOP)/build/debian/contrail-storage-packages/
 export _contrailopt := /opt/contrail
 
 SRC_VER := $(shell cat $(SB_TOP)/controller/src/base/version.info)
 
 BUILDTAG =
-TGZ_FILE =
+OS_VER =
+TP_PACKAGE_SOURCES =
+DEFAULT_PACKAGE_SOURCES = $(SB_TOP)/build/debian
+
 ifdef TAG
 BUILDTAG = $(SRC_VER)-$(TAG)~$(CONTRAIL_SKU)
 else
 BUILDTAG = $(SRC_VER)-$(BUILDTIME)~$(CONTRAIL_SKU)
 endif
 
-ifdef FILE_LIST
-TGZ_FILE = $(FILE_LIST)
+ifdef PACKAGE_DIRS
+PACKAGE_SOURCES := $(PACKAGE_DIRS)
+else
+PACKAGE_SOURCES := $(DEFAULT_PACKAGE_SOURCES)
 endif
 
+ifdef OS_VERSION
+OS_VER := $(shell echo $(OS_VERSION) | sed 's,[-|.],,g')
+else
+OS_VER := $(shell PYTHONPATH=$(PYTHONPATH):$(SB_TOP)/tools/packaging/build/ python -c "import package_utils; print package_utils.get_platform()")
+endif
+
+DEFAULT_THIRDPARTY_PACKAGE_DIRS = /cs-shared/builder/cache/$(OS_VER)/$(CONTRAIL_SKU)/ceph/
+ifdef THIRDPARTY_PACKAGE_DIRS
+TP_PACKAGE_SOURCES := $(THIRDPARTY_PACKAGE_DIRS)
+else
+TP_PACKAGE_SOURCES := $(DEFAULT_THIRDPARTY_PACKAGE_DIRS)
+endif
+
+ifdef PACKAGE_FILE
+PKG_FILE := $(PACKAGE_FILE)
+else
+PKG_FILE := $(SB_TOP)/tools/packaging/package_configs/$(OS_VER)-$(CONTRAIL_SKU)-storage
+endif
+
+ifdef THIRDPARTY_PACKAGE_FILE
+TP_PKG_FILE := $(THIRDPARTY_PACKAGE_FILE)
+else
+TP_PKG_FILE := $(SB_TOP)/tools/packaging/package_configs/$(OS_VER)-$(CONTRAIL_SKU)-storage-thirdparty
+endif
+
+
 %:
-	dh $@
+	dh $@ --tmpdir=${buildroot} --destdir=${SB_TOP}/build/debian
 
 override_dh_auto_build: 
 	cat debian/changelog.in | sed 's,BUILDTAG,$(BUILDTAG),g' > debian/changelog
@@ -37,9 +68,15 @@ override_dh_auto_build:
 override_dh_auto_install:
 	@echo "making deb for contrail-storage-packages"
 	install -d -m 755 $(buildroot)$(_contrailopt)
+	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_storage_repo/
 	install -d -m 755 $(buildroot)$(_contrailopt)/contrail_packages
 	install -p -m 755 $(SB_TOP)/tools/packaging/build/setup_storage_ubuntu.sh  $(buildroot)$(_contrailopt)/contrail_packages/setup_storage.sh
-	if [ -f $(TGZ_FILE) ]; then echo "Using TGZ FILE = $(TGZ_FILE)"; install -p -m 644 $(TGZ_FILE) $(buildroot)$(_contrailopt)/contrail_packages/contrail_storage_debs.tgz; else echo "ERROR: TGZ file containing all debs is not supplied or not present"; echo "Supply Argument: FILE_LIST=<TGZ FILE>"; exit 1; fi
-
+	$(SB_TOP)/tools/packaging/build/copy_built_packages.py --package-file $(PKG_FILE) \
+							       --destination-dir $(buildroot)$(_contrailopt)/contrail_storage_repo/ \
+							       --source-dirs $(PACKAGE_SOURCES) \
+							       --excludes contrail-storage-packages || (echo "Copying Built packages failed"; exit 1)
+	$(SB_TOP)/tools/packaging/build/copy_thirdparty_packages.py --package-file $(TP_PKG_FILE) \
+                                                                    --destination-dir $(buildroot)$(_contrailopt)/contrail_storage_repo/ \
+                                                                    --source-dirs $(TP_PACKAGE_SOURCES) || (echo "Copying Thirdparty packages failed"; exit 1)
 	
 override_dh_usrlocal:	
